# s2-clouds

./: Dockerfile  pyproject.toml  requirements.in  requirements.txt
.argo/: process_tile.yaml
.github/: build-test-docker.yml
.github/workflows/: build-test-docker.yml
data/: s2_grid.gpkg
dep_s2_clouds/: grid.py  main.py
