[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dep-s2-clouds"
version = "0.1.0"
description = "Sentinel-2 Cloud Masking for Digital Earth Pacific"
authors = [{"name" = "Jesse Anderson <jesse.anderson@gmail.com>"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools]
packages = [
  "dep_s2_clouds"
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
